fix slide image align mobile

--- a/css/main.scss
+++ b/css/main.scss
@@ -612,6 +612,8 @@ header {
       -moz-transition: -moz-transform .4s 0s;
       transition: transform .4s 0s;
     }
+  }
+  @media screen and (max-width: $screen-md-min) {
     img.img-responsive {
       width: 980px;
       margin: 0 auto;
